Add Product management functionality with service, controller, repository, DTOs, and tests